Added the login logic

--- a/traceability-app/src/app/main-page/main-page.component.html
+++ b/traceability-app/src/app/main-page/main-page.component.html
@@ -1,5 +1,4 @@
-<button (click)="login()" >login</button>
 
 <button (click)="logout()" >log out</button>
 
-<p>main-page works!</p>
+<p *ngIf="displayPlatform">main-page works!</p>
