--- a/traceability-app/src/app/main-page/main-page.component.html
+++ b/traceability-app/src/app/main-page/main-page.component.html
@@ -1,4 +1,59 @@
 
 <button (click)="logout()" >log out</button>
 
-<p *ngIf="displayPlatform">main-page works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark " style="background-color: #222;border-bottom: 2px #76b900 solid;">
+  <div class="container-fluid">
+    <a class="navbar-brand">
+      <img src="assets/images/logo.png">
+    </a>
+  </div>
+</nav>
+
+<div class="container" style="padding-top: 50px;" *ngIf="displayPlatform">
+  <div class="row">
+    <div class="col-lg-3"></div>
+    <div class="col-lg-6">
+      <div class="card" style="margin-bottom: 10px;">
+        <div class="card-header">
+          <div style="color:#6d6d6d;" *ngIf="username">Hello - {{username}} </div>
+        </div>
+        <div class="card-body">
+          <p class="card-text" id="cardContent">
+          <div class="step1">
+            <form id="myForm">
+              <input type="hidden" name="step" value="1">
+              <div class="form-group">
+                <label for="batchOption">Select Option:</label>
+                <select name="batchOption" id="batchOption" class="form-control">
+                    <option value="{{v.key}}" *ngFor="let v of options">{{v.value}}</option>
+                </select>
+              </div>
+              <div class="form-group mt-2">
+                <label for="comment">Sns:</label>
+                <textarea class="form-control" name="sns" id="sns" rows="8" id="comment"></textarea>
+                <div class="mt-2">
+
+                  <span style="font-size: 13px;">* Max Serial numbers to load in session is 50,000</span>
+                </div>
+              </div>
+              <div class="form-group mt-2">
+                <input type="submit" value="Action" class="btn btn-success">
+              </div>
+            </form>
+          </div>
+
+        </div>
+        <div class="card-footer" style="color:#6d6d6d">
+          Step <i class="fas fa-angle-right"></i> <span id="stepContain">{{step}}</span>
+        </div>
+      </div>
+
+      <div class="card" style="padding: 5px;">
+        <div class="card-body">
+          <div class="cleanSession"><i class="fas fa-trash"></i>Clean User Sessions ()</div>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3"></div>
+  </div>
+</div> <!-- container end -->
