--- a/traceability-app/src/app/main-page/main-page.component.html
+++ b/traceability-app/src/app/main-page/main-page.component.html
@@ -37,7 +37,7 @@
                 </div>
               </div>
               <div class="form-group mt-2">
-                <input type="submit" value="Action" class="btn btn-success">
+                <input type="submit" (click)="onSubmit()" value="Action" class="btn btn-success">
               </div>
             </form>
           </div>
@@ -50,7 +50,7 @@
 
       <div class="card" style="padding: 5px;">
         <div class="card-body">
-          <div class="cleanSession"><i class="fas fa-trash"></i>Clean User Sessions ()</div>
+          <div class="cleanSession"><i class="fas fa-trash"></i>Clean User Sessions ({{username}})</div>
         </div>
       </div>
     </div>
