--- a/traceability-app/src/app/main-page/main-page.component.html
+++ b/traceability-app/src/app/main-page/main-page.component.html
@@ -44,13 +44,13 @@
 
         </div>
         <div class="card-footer" style="color:#6d6d6d">
-          Step <i class="fas fa-angle-right"></i> <span id="stepContain">{{step}}</span>
+          Step <i class="fas fa-chevron-right" style="font-size: 12px;padding-right: 5px;"></i>  <span id="stepContain">{{step}}</span>
         </div>
       </div>
 
       <div class="card" style="padding: 5px;">
         <div class="card-body">
-          <div class="cleanSession"><i class="fas fa-trash"></i>Clean User Sessions ({{username}})</div>
+          <div class="cleanSession"> <i class="fas fa-trash"></i> Clean User Sessions ({{username}})</div>
         </div>
       </div>
     </div>
