--- a/traceability-app/src/styles.css
+++ b/traceability-app/src/styles.css
@@ -13,3 +13,16 @@ body{
   -webkit-box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
   box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
 }
+
+.cleanSession {
+  color: #6d6d6d;
+  cursor: pointer;
+}
+
+.cleanSession:hover {
+  text-decoration: underline;
+}
+#stepContain {
+  font-weight: bold;
+  text-decoration: underline;
+}
