--- a/traceability-app/src/app/main-page/main-page.component.html
+++ b/traceability-app/src/app/main-page/main-page.component.html
@@ -1,6 +1,5 @@
 
-<button (click)="logout()" >log out</button>
-
+<!--<button (click)="logout()" >log out</button>-->
 <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: #222;border-bottom: 2px #76b900 solid;">
   <div class="container-fluid">
     <a class="navbar-brand">
@@ -19,63 +18,9 @@
         </div>
         <div class="card-body">
           <p class="card-text" id="cardContent">
-            <app-step-one *ngIf="step == 1"></app-step-one>
-
-          <div *ngIf="step==2">
-
-              <div class="row" *ngIf="fetchData[0].selectedOption == 'SERIAL_NUMBER' && fetchData[0].notFound.length">
-                  <div class="col-lg-12">
-                      <b>Traceability information not found for Serial Number:</b> <mark>{{fetchData[0].notFound}} </mark>
-                  </div>
-              </div>
-
-
-            <div class="row">
-              <div class="col-lg-12">
-                <b>Total Serial Result: <mark>{{fetchData[0].totalSearch}}</mark></b>
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="col-lg-12">
-                <b>Total Serial Numbers found: <mark>{{fetchData[0].totalFetch}}</mark></b>
-              </div>
-            </div>
-
-            <hr>
-            <div class="row">
-              <div class="col-lg-12">
-
-
-                <ul class="searchList" *ngIf="fetchData[0].dataFound.length">
-
-                  <li *ngFor="let v of fetchData[0].dataFound">
-                      <input type="checkbox" class="serialsSearch"  checked name="serialsSearch" value="{{v.SERIAL_NUMBER}}">{{v.SERIAL_NUMBER}}
-                  </li>
-
-                </ul>
-
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-12">
-
-
-                <div *ngIf="fetchData[0].dataFound.length">
-                  <input type="button" style="margin-right: 5px;" class="btn btn-success createSessionAction" value="Create Session">
-                  <input type="button" (click)="returnStep1();" class="btn btn-danger returnBackAction" value="Cancel">
-                </div>
-                <div *ngIf="!fetchData[0].dataFound.length">
-                  <p><b>Traceability information not found..</b></p>
-                  <br>
-                  <input (click)="returnStep1();" type="button" class="btn btn-danger returnBackAction" value="Back">
-                </div>
-              </div>
-            </div>
-          </div>
-          <div *ngIf="step==3">
-
-          </div>
+            <app-step-one   *ngIf="step == 1"></app-step-one>
+            <app-step-two   *ngIf="step == 2"></app-step-two>
+            <app-step-three *ngIf="step == 3"></app-step-three>
         </div>
         <div class="card-footer" style="color:#6d6d6d">
           Step <i class="fas fa-chevron-right" style="font-size: 12px;padding-right: 5px;"></i>  <span id="stepContain">{{step}}</span>
@@ -84,7 +29,7 @@
 
       <div class="card" style="padding: 5px;">
         <div class="card-body">
-          <div class="cleanSession"> <i class="fas fa-trash"></i> Clean User Sessions ({{username}})</div>
+          <div class="cleanSession" (click)="clearSession()"> <i class="fas fa-trash"></i> Clean User Sessions ({{username}}) <label class="background-green" *ngIf="doneFlag">{{doneFlag}}</label></div>
         </div>
       </div>
     </div>
