--- a/traceability-app/src/app/main-page/step-three/step-three.component.html
+++ b/traceability-app/src/app/main-page/step-three/step-three.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class="row">
   <div class="col-lg-12">
-    <i class="fas fa-angle-right"></i> <a target="_blank" href="http://bi12-dev.mellanox.com:9502/analytics/saw.dll?Dashboard&PortalPath=%2Fshared%2FReleased%20Dashboards%2F_portal%2FTraceability&Page=Traceability&Action=RefreshAll&JK_REPORT_ID={{sesstionId}}">To Report</a>
+    <i class="fas fa-angle-right"></i> <a target="_blank" href="{{domain}}/analytics/saw.dll?Dashboard&PortalPath=%2Fshared%2FReleased%20Dashboards%2F_portal%2FTraceability&Page=Traceability&Action=RefreshAll&JK_REPORT_ID={{sesstionId}}">To Report</a>
   </div>
 </div>
 
